# WeRide

./: .gitignore  ARCHITECTURE.md
.github/workflows/: ci.yml
.obsidian/: app.json  workspace.json
backend/: Dockerfile  check_db.py  dev.db  init_db.py  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  convoys.py  deps.py  users.py  websockets.py
backend/app/core/: database.py  routing.py  security.py  socket_manager.py
backend/app/models/: domain.py
backend/migrations/: env.py
backend/migrations/versions/: 3f96f00550fc_initial_migration.py  96c4c0d4cabc_add_hashed_password_to_user.py
backend/tests/: conftest.py  manual_test_auth_flow.py  manual_test_convoys.py  manual_test_guest.py  manual_test_websocket.py  race_simulation.py  test_auth_flow.py  test_main.py  verify_secure_flow.py  verify_share_link.py
frontend/: App.tsx  app.json  package-lock.json  package.json
frontend/src/: api.ts  config.ts
frontend/src/components/: SmoothCarMarker.tsx
frontend/src/screens/: DashboardScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  MapScreen.tsx  SignupScreen.tsx
infra/: docker-compose.yml
wiki/: Tasks for first week acroos UI.md
