[tool.poetry]
name = "weride-backend"
version = "0.1.0"
description = "Backend for WeRide social navigation app"
authors = ["Noam Yehoshua"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
geoalchemy2 = "^0.14.3"
redis = "^5.0.1"
shapely = "^2.0.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
