[tool.poetry]
name = "weride-backend"
version = "0.1.0"
description = "Backend for WeRide social navigation app"
authors = ["Noam Yehoshua"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
geoalchemy2 = "^0.14.3"

shapely = "^2.0.2"
httpx = "0.27.2"
websockets = "^15.0.1"
alembic = "^1.17.2"
python-dotenv = "^1.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
bcrypt = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
